add put to docs
